@@ -1,3 +1,6 @@
+[B]3.2.2[/B]
+- Fixed: Another patch in order to fix TVDB inconsistency (trying to find series without overview)
+
 [B]3.2.1[/B]
 - Fixed: artwork preview (Scudlee rocks! Thank you!)
 
